# k8s-hard-way-ansible

./: .editorconfig  .gitignore  .markdownlint.yaml  .markdownlintignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  README.md  Taskfile.dist.yml  Vagrantfile  ansible.cfg  cliff.toml  play  pyproject.toml  requirements.txt  requirements.yml  sonar-project.properties  ssh.cfg
.config/: ansible-lint.yml  yamllint.yml
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yaml
.github/workflows/: lint-ansible.yml  lint-md.yml  scorecard.yml  sonar.yml
ansible/: connection.yml  k8s_install.yml  provision.yml
ansible/callback_plugins/: rich_callback_plugin.py
ansible/files/dotfiles/: .zprofile  .zshenv  .zshrc  tmux.conf  vimrc
ansible/files/k8s/: grafana.yaml
ansible/inventory/: cluster.k8s.yml  home.yml  vagrant.yml
ansible/inventory/group_vars/: all.yml  vagrant.yml
ansible/inventory/host_vars/: localhost.yml
ansible/tasks/: bootstrap_etcd.yml  create_ca_and_tls.yml  generate_encryption_config.yml  generate_kubeconfig.yml  install_kubectl.yml  provision_ca_and_tls.yml  setup_dotfiles.yml  setup_hosts.yml  setup_kernel.yml
ansible/templates/db/: etcd.service.j2
ansible/templates/k8s/: encryption-config.yaml.j2
docs/: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md
scripts/: bump.sh  play.sh
vm/: README  README.md  Vagrantfile  grafana.yaml
vm/debian/: vimrc
vm/utils/: approve_csr.sh  cert_verify.sh  setup-hosts.sh  setup-kernel.sh  ssh.sh
vm/vagrant/: install-guest-additions.sh
