[project]
name = "k8s_hard_way_ansible"
description = "Provisioning of Kubernetes the hard way with Ansible"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Sergij Boremchuk", email = "searge@duck.com"},
]
classifiers = [
    "License :: OSI Approved :: BSD Clause 3",
    "Operating System :: POSIX :: Linux",
    "Intended Audience :: System Administrators",
    "Framework :: Ansible",
]
keywords = ["ansible", "provisioning", "kubernetes", "debian"]

requires-python = ">=3.10"
dependencies = [
    "ansible",
    "ansible-core>=2.15",
    "cryptography>=41",
    "passlib>=1.7",
    "docker",
    "kubernetes",
    "ruff",
    "yamllint",
    "ansible-lint",
]

[project.urls]
Repository = "https://github.com/searge/k8s-hard-way-ansible.git"
